tests/ui/const-generics/mgca/invalid-array-in-tuple.stderr
error: the constant `Bar` is not of type `Foo`
  --> $DIR/invalid-array-in-tuple.rs:14:32
   |
LL |     takes_tuple_with_array::<{ ([Bar], 1) }>();
   |                                ^^^^^^^^^^ expected `Foo`, found `Bar`

error: aborting due to 1 previous error

